--- a/lib/simplex_web/live/post_live/index.html.heex
+++ b/lib/simplex_web/live/post_live/index.html.heex
@@ -7,6 +7,8 @@
   </:actions>
 </.header>
 
+<.live_component module={SimplexWeb.HomeComponents.Navbar} active_tab="home" id={:navbar} />
+
 <.table
   id="posts"
   rows={@streams.posts}
